[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "Protobuf and cap'n protos of Exocore (Distributed applications framework)"
edition = "2021"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exocore-protos"
repository = "https://github.com/appaquet/exocore"
version = "0.1.25"

[dependencies]
anyhow = "1.0.79"
base64 = "0.21"
capnp = { version = "0.18", features = ["sync_reader"] }
chrono = "0.4.31"
prost = "0.12.3"
prost-types = "0.12.3"
protobuf = "3.3.0"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.109"
thiserror = "1.0.56"

[build-dependencies]
capnpc = "0.18"
prost-build = "0.12.3"
