[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "Protobuf and cap'n protos of Exocore (Distributed applications framework)"
edition = "2021"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exocore-protos"
repository = "https://github.com/appaquet/exocore"
version = "0.1.25"

[dependencies]
anyhow = "1.0.82"
base64 = "0.22"
capnp = { version = "0.19", features = ["sync_reader"] }
chrono = "0.4.38"
prost = "0.12.6"
prost-types = "0.12.4"
protobuf = "3.4.0"
serde = "1.0.203"
serde_derive = "1.0.197"
serde_json = "1.0.116"
thiserror = "1.0.59"

[build-dependencies]
capnpc = "0.19"
prost-build = "0.12.4"
