[package]
name = "exocore-schema"
version = "0.1.0"
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
edition = "2018"

[features]
tests_utils = []

[dependencies]
log = "0.4"
maplit = "1"
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
uuid = { version = "0.7", features = ["v4", "wasm-bindgen"] }
chrono = { version = "0.4", features = ["serde"] }
wasm-timer = "0.1"

[dev-dependencies]
tempdir = "0.3"
