[package]
name = "exocore-schema"
description = "Schema of Exocore (Distributed applications framework)"
version = "0.1.0"
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
edition = "2018"
keywords = ["networking", "mobile", "web", "framework", "ios", "android", "webassembly", "storage", "database"]
categories = ["Database implementations", "Command-line interface", "WebAssembly", "Web programming"]
repository = "https://github.com/appaquet/exocore"
license = "MIT"

[features]
tests_utils = []

[dependencies]
exocore-common = { path = "../common" }
log = "0.4"
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
chrono = { version = "0.4", features = ["serde"] }
wasm-timer = "0.2"

[dev-dependencies]
exocore-common = { path = "../common", features = ["tests_utils"] }
tempdir = "0.3"
