[package]
name = "exomind-server"
version = "0.1.0"
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
tokio = { version = "0.3", features = ["macros", "rt-multi-thread", "time"] }
exocore = { git = "https://github.com/appaquet/exocore.git", default-features = false, features = ["client", "logger"] }
log = "0.4"
exomind-core = { path = "../core" }
anyhow = "1.0"
structopt = "0.3"
serde = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0"
