[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "Store / indexation layer of Exocore (Distributed applications framework)"
edition = "2021"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exocore-store"
repository = "https://github.com/appaquet/exocore"
version = "0.1.19"

[features]
default = ["local", "remote"]
local = [
  "exocore-chain/engine",
  "exocore-core",
  "exocore-chain",
  "byteorder",
  "crc",
  "extsort",
  "lru",
  "serde",
  "serde_derive",
  "serde_json",
  "tantivy"
]
remote = ["exocore-core", "exocore-transport"]
tests-utils = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.1"
chrono = {version = "0.4", features = ["serde"]}
exocore-protos = {version = "0.1.19", path = "../protos"}
futures = "0.3"
itertools = "0.10"
log = "0.4"
smallvec = "1.6"
thiserror = "1.0"

# local or remote
exocore-chain = {version = "0.1.19", path = "../chain", default-features = false, optional = true}
exocore-core = {version = "0.1.19", path = "../core", optional = true}
exocore-transport = {version = "0.1.19", path = "../transport", default-features = false, optional = true}

# local 
byteorder = {version = "1.3", optional = true}
crc = {version = "2.1", optional = true}
extsort = {version = "0.4", optional = true}
lru = {version = "0.7", optional = true}
serde = {version = "1.0", optional = true}
serde_derive = {version = "1.0", optional = true}
serde_json = {version = "1.0", optional = true}
tantivy = {version = "0.16", optional = true}

[dev-dependencies]
exocore-chain = {version = "0.1.19", path = "../chain", features = ["tests-utils"]}
exocore-core = {version = "0.1.19", path = "../core", features = ["tests-utils"]}
tempfile = "3.2"
tokio = {version = "1.17", features = ["macros"], default-features = false}
