[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "Store / indexation layer of Exocore (Distributed applications framework)"
edition = "2021"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exocore-store"
repository = "https://github.com/appaquet/exocore"
version = "0.1.25"

[features]
default = ["local", "remote"]
local = [
  "exocore-chain/engine",
  "exocore-core",
  "exocore-chain",
  "byteorder",
  "crc",
  "extsort",
  "lru",
  "serde",
  "serde_derive",
  "serde_json",
  "tantivy",
]
remote = ["exocore-core", "exocore-transport"]
tests-utils = []

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
bytes = "1.4.0"
chrono = {version = "0.4.26", features = ["serde"]}
exocore-protos = {version = "0.1.25", path = "../protos"}
futures = "0.3.28"
itertools = "0.11.0"
log = "0.4.19"
smallvec = "1.10.0"
thiserror = "1.0.40"

# local or remote
exocore-chain = {version = "0.1.25", path = "../chain", default-features = false, optional = true}
exocore-core = {version = "0.1.25", path = "../core", optional = true}
exocore-transport = {version = "0.1.25", path = "../transport", default-features = false, optional = true}

# local 
byteorder = {version = "1.4.3", optional = true}
crc = {version = "3.0.1", optional = true}
extsort = {version = "0.4.2", optional = true}
lru = {version = "0.11.0", optional = true}
serde = {version = "1.0.168", optional = true}
serde_derive = {version = "1.0.164", optional = true}
serde_json = {version = "1.0.103", optional = true}
tantivy = {version = "0.19.2", optional = true}

[dev-dependencies]
exocore-chain = {version = "0.1.25", path = "../chain", features = ["tests-utils"]}
exocore-core = {version = "0.1.25", path = "../core", features = ["tests-utils"]}
tempfile = "3.6.0"
tokio = {version = "1.29.1", features = ["macros"], default-features = false}
