[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "Transport layer of Exocore (Distributed applications framework)"
edition = "2021"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exocore-transport"
repository = "https://github.com/appaquet/exocore"
version = "0.1.20"

[features]
default = ["p2p-full", "http-server"]
http-server = ["hyper", "url", "exocore-core/runtime"]
p2p-base = ["libp2p"]
p2p-full = ["p2p-base", "libp2p/tcp-tokio"]
p2p-web = ["p2p-base", "libp2p/wasm-ext-websocket", "libp2p/wasm-bindgen", "gloo-timers"]
tests-utils = ["exocore-core/tests-utils"]

[dependencies]
anyhow = "1.0"
byteorder = "1.3"
bytes = "1.1"
exocore-core = {version = "0.1.20", path = "../core"}
exocore-protos = {version = "0.1.20", path = "../protos"}
futures = "0.3"
gloo-timers = {version = "=0.2.2", optional = true}# force version because of wasm setTimeout bug: https://github.com/rustwasm/gloo/issues/187
hyper = {version = "0.14", features = ["full"], optional = true}
libp2p = {version = "0.44", optional = true, default-features = false, features = ["mplex", "noise", "websocket", "yamux", "ping", "identify", "dns-tokio", "tcp-tokio"]}
log = "0.4"
pin-project = "1.0"
thiserror = "1.0"
url = {version = "2.2", optional = true}

[dev-dependencies]
exocore-core = {version = "0.1.20", path = "../core", features = ["tests-utils"]}
tokio = {version = "1.17", features = ["macros"], default-features = false}
