[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "Transport layer of Exocore (Distributed applications framework)"
edition = "2021"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exocore-transport"
repository = "https://github.com/appaquet/exocore"
version = "0.1.25"

[features]
default = ["p2p-full", "http-server"]
http-server = ["hyper", "url", "exocore-core/runtime"]
p2p-base = ["libp2p"]
p2p-full = ["p2p-base", "libp2p/tcp"]
p2p-web = ["p2p-base", "libp2p/wasm-ext-websocket", "libp2p/wasm-bindgen", "gloo-timers"]
tests-utils = ["exocore-core/tests-utils"]

[dependencies]
anyhow = "1.0.70"
byteorder = "1.4.3"
bytes = "1.4.0"
exocore-core = {version = "0.1.25", path = "../core"}
exocore-protos = {version = "0.1.25", path = "../protos"}
futures = "0.3.27"
gloo-timers = {version = "0.2", optional = true}
hyper = {version = "0.14.25", features = ["full"], optional = true}
libp2p = {version = "0.51.1", optional = true, default-features = false, features = ["mplex", "noise", "websocket", "yamux", "ping", "identify", "macros", "tokio", "dns"]}
libp2p-identity = { version = "0.1.1", features = ["secp256k1"], default-features = false }
log = "0.4.17"
pin-project = "1.0.12"
thiserror = "1.0.40"
url = {version = "2.3.1", optional = true}

[dev-dependencies]
exocore-core = {version = "0.1.25", path = "../core", features = ["tests-utils"]}
tokio = {version = "1.27.0", features = ["macros"], default-features = false}
