[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "Distributed applications framework"
edition = "2021"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exocore-apps-host"
repository = "https://github.com/appaquet/exocore"
version = "0.1.22"

[features]
default = []

[dependencies]
anyhow = "1.0.59"
exocore-core = {version = "0.1.22", path = "../../core"}
exocore-protos = {version = "0.1.22", path = "../../protos"}
exocore-store = {version = "0.1.22", path = "../../store"}
futures = "0.3.21"
log = "0.4.17"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls"] }
thiserror = "1.0.32"

[target."cfg(any( all(target_arch = \"x86_64\", any(target_os = \"linux\", target_os = \"macos\", target_os = \"windows\")), all(target_arch = \"aarch64\", any(target_os = \"linux\", target_os = \"macos\")) ))".dependencies]
wasmtime = "0.39.1"

[dev-dependencies]
exocore-core = {version = "0.1.22", path = "../../core", features = ["tests-utils"]}
