[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "Distributed applications framework"
edition = "2021"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exocore-apps-host"
repository = "https://github.com/appaquet/exocore"
version = "0.1.25"

[features]
default = []

[dependencies]
anyhow = "1.0.70"
exocore-core = {version = "0.1.25", path = "../../core"}
exocore-protos = {version = "0.1.25", path = "../../protos"}
exocore-store = {version = "0.1.25", path = "../../store"}
futures = "0.3.27"
log = "0.4.17"
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls"] }
thiserror = "1.0.40"

[target."cfg(any( all(target_arch = \"x86_64\", any(target_os = \"linux\", target_os = \"macos\", target_os = \"windows\")), all(target_arch = \"aarch64\", any(target_os = \"linux\", target_os = \"macos\")) ))".dependencies]
wasmtime = "4.0.1"
wasmtime-wasi = { version = "4.0.1", features = ["tokio"] }

[dev-dependencies]
exocore-core = {version = "0.1.25", path = "../../core", features = ["tests-utils"]}
