[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "Distributed applications framework"
edition = "2021"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exocore-apps-macros"
repository = "https://github.com/appaquet/exocore"
version = "0.1.25"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.72"
futures = "0.3.28"
log = "0.4.19"
quote = "1.0.31"
syn = { version = "2.0.27", features = ["full", "fold"] }
thiserror = "1.0.44"
