[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "Distributed applications framework"
edition = "2018"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exocore-apps-runtime"
repository = "https://github.com/appaquet/exocore"
version = "0.1.3"

[features]
default = []

[dependencies]
anyhow = "1.0"
exocore-core = {version = "0.1.3", path = "../../core"}
exocore-protos = {version = "0.1.3", path = "../../protos"}
log = "0.4"
thiserror = "1.0"
wasmtime = "0.23.0"

[dev-dependencies]
exocore-core = {version = "0.1.3", path = "../../core", features = ["tests-utils"]}
