[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "Distributed applications framework"
edition = "2021"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exocore-apps-sdk"
repository = "https://github.com/appaquet/exocore"
version = "0.1.21"

[dependencies]
anyhow = "1.0.57"
exocore-apps-macros = {version = "0.1.21", path = "../macros"}
exocore-protos = {version = "0.1.21", path = "../../protos"}
exocore-store = {version = "0.1.21", path = "../../store", default-features = false}
futures = "0.3.21"
lazy_static = "1.4.0"
log = "0.4.16"
quote = "1.0.18"
thiserror = "1.0.31"
chrono = "0.4.19"

[dev-dependencies]
tokio = { version = "1.18.1", features = ["macros"], default-features = false }
