[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
edition = "2021"
name = "exocore-client-android"
version = "0.1.23"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.62"
exocore-core = {version = "0.1.23", path = "../../core", features = ["runtime", "logger"]}
exocore-store = {version = "0.1.23", path = "../../store"}
exocore-transport = {version = "0.1.23", path = "../../transport", features = ["p2p-full"]}
thiserror = "1.0.32"
