[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
edition = "2021"
name = "exocore-client-android"
version = "0.1.24"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.70"
exocore-core = {version = "0.1.24", path = "../../core", features = ["runtime", "logger"]}
exocore-store = {version = "0.1.24", path = "../../store"}
exocore-transport = {version = "0.1.24", path = "../../transport", features = ["p2p-full"]}
thiserror = "1.0.40"
