[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
edition = "2021"
name = "exocore-client-android"
version = "0.1.25"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.80"
exocore-core = {version = "0.1.25", path = "../../core", features = ["runtime", "logger"]}
exocore-store = {version = "0.1.25", path = "../../store"}
exocore-transport = {version = "0.1.25", path = "../../transport", features = ["p2p-full"]}
thiserror = "1.0.58"
