[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
edition = "2021"
name = "exocore-client-c"
version = "0.1.23"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "exocore"

[dependencies]
exocore-core = {version = "0.1.23", path = "../../core", features = ["runtime", "logger"]}
exocore-discovery = {version = "0.1.23", path = "../../discovery", default-features = false}
exocore-protos = {version = "0.1.23", path = "../../protos"}
exocore-store = {version = "0.1.23", path = "../../store", default-features = false, features = ["remote"]}
exocore-transport = {version = "0.1.23", path = "../../transport", features = ["p2p-full"]}
weak-table = "0.3.2"
futures = "0.3.23"
libc = "0.2.132"
log = "0.4.17"
log4rs = "1.1.1"
serde_json = "1.0.83"
