[package]
name = "exocore-client-ios"
version = "0.1.0"
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
exocore-core = { path = "../../core", features = ["runtime", "logger"] }
exocore-transport = { path = "../../transport", features = ["p2p-full"] }
exocore-store = { path = "../../store", default-features = false }
libc = "0.2"
log4rs = "0.13"
log = "0.4"
serde_json = "1.0"
futures = "0.3"
prost = "0.6"
bytes = "0.5"
