[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
edition = "2021"
name = "exocore-client-web"
version = "0.1.25"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.74"
console_error_panic_hook = "0.1.7"
exocore-core = {version = "0.1.25", path = "../../core", default-features = false, features=["web"]}
exocore-discovery = {version = "0.1.25", path = "../../discovery", default-features = false}
exocore-protos = {version = "0.1.25", path = "../../protos", default-features = false}
exocore-store = {version = "0.1.25", path = "../../store", default-features = false, features = ["remote"]}
exocore-transport = {version = "0.1.25", path = "../../transport", default-features = false, features = ["p2p-web"]}
futures = "0.3.28"
js-sys = "0.3.64"
log = "0.4.20"
thiserror = "1.0.47"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }# serde for serialization from JsValue
wasm-bindgen-futures = "0.4.37"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.64", features = ["Storage", "Window"] }

# Needed to force rand 0.7 to load with wasm support
rand07 = {package = "rand", version = "0.7", features = ["wasm-bindgen"]}
