[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "Storage of Exocore (Distributed applications framework)"
edition = "2021"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exocore-chain"
repository = "https://github.com/appaquet/exocore"
version = "0.1.27"

[features]
default = ["engine", "directory-chain", "memory-pending"]
directory-chain = ["mmap", "extindex"]
engine = ["exocore-core/runtime"]
memory-pending = []
mmap = ["memmap2"]
tests-utils = ["engine", "tempfile", "directory-chain", "memory-pending", "exocore-core/tests-utils", "exocore-transport/tests-utils"]

[dependencies]
anyhow = "1.0.95"
byteorder = "1.5.0"
exocore-core = {version = "0.1.27", path = "../core"}
exocore-protos = {version = "0.1.27", path = "../protos"}
exocore-transport = {version = "0.1.27", path = "../transport", default-features = false}
futures = "0.3.31"
itertools = "0.13.0"
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
bytes = "1.9.0"

# For directory chain
extindex = { version = "0.8.0", optional = true }
memmap2 = { version = "0.9.5", optional = true }

# For tests
tempfile = { version = "3.13.0", optional = true }

[dev-dependencies]
exocore-core = {version = "0.1.27", path = "../core", features = ["tests-utils"]}
exocore-transport = {version = "0.1.27", path = "../transport", features = ["tests-utils"]}
tempfile = "3.13.0"
tokio = { version = "1.42.0", features = ["macros"], default-features = false }

[[test]]
name = "engine"
required-features = ["tests-utils"]
