[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "Core of Exocore (Distributed applications framework)"
edition = "2021"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exocore-core"
repository = "https://github.com/appaquet/exocore"
version = "0.1.27"

[features]
logger = ["log4rs"]
runtime = [
  "tokio/io-util",
  "tokio/io-std",
  "tokio/net",
  "tokio/rt",
  "tokio/rt-multi-thread",
  "tokio/sync",
  "tokio/time",
  "tokio/macros",
]
tests-utils = ["runtime", "logger"]
web = [
  "getrandom/js", # see https://docs.rs/getrandom/0.2.0/getrandom/#webassembly-support  
  "web-sys",
]

[dependencies]
anyhow = "1.0.89"
bs58 = "0.5.1"
byteorder = "1.5.0"
bytes = "1.7.2"
chrono = "0.4.38"
exocore-protos = {version = "0.1.27", path = "../protos"}
futures = { version = "0.3.31", features = ["async-await"] }
libp2p = { version = "0.53.2", features = ["noise", "secp256k1"], default-features = false }
libp2p-identity = { version = "0.2.9", features = ["secp256k1", "ed25519"], default-features = false }
log = "0.4.22"
log4rs = { version = "1.3.0", optional = true }
multihash = "0.19.1"
multihash-codetable = {version="0.1.3", features=["sha3"]}
multihash-derive = {version="0.9"}
petname = "2.0"
rand = "0.8"
serde = "1.0.209"
serde_derive = "1.0.209"
serde_json = "1.0.127"
serde_yaml = "0.9.34"
shadow-rs = { version = "0.35.1", default-features = false }
thiserror = "1.0.64"
url = "2.5.2"
uuid = { version = "1.4.1", features = ["v4", "wasm-bindgen"] }
wasm-timer = "0.2.5"

# web
web-sys = { version = "0.3.72", features = ["Storage"], optional = true }

[target."cfg(target_arch = \"wasm32\")".dependencies]
getrandom = "0.2.15"
wasm-bindgen = "0.2.94"
wasm-bindgen-futures = "0.4.45"
chrono = { version = "0.4.38", default-features = false, features = [] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.40.0", features = ["rt"], default-features = false }

[build-dependencies]
shadow-rs = { version = "0.35.1", default-features = false }

[dev-dependencies]
criterion_bencher_compat = "0.4.0"
log4rs = "1.3.0"
tempfile = "3.13.0"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread", "time"], default-features = false }

[[bench]]
harness = false
name = "capnp_frame"
