[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
categories = ["database-implementations", "command-line-interface", "wasm", "web-programming"]
description = "Core of Exocore (Distributed applications framework)"
edition = "2021"
keywords = ["networking", "mobile", "webassembly", "storage", "database"]
license = "Apache-2.0"
name = "exocore-core"
repository = "https://github.com/appaquet/exocore"
version = "0.1.27"

[features]
logger = ["log4rs"]
runtime = [
  "tokio/io-util",
  "tokio/io-std",
  "tokio/net",
  "tokio/rt",
  "tokio/rt-multi-thread",
  "tokio/sync",
  "tokio/time",
  "tokio/macros",
]
tests-utils = ["runtime", "logger"]
web = [
  "getrandom/js", # see https://docs.rs/getrandom/0.2.0/getrandom/#webassembly-support  
  "web-sys",
]

[dependencies]
anyhow = "1.0.95"
bs58 = "0.5.1"
byteorder = "1.5.0"
bytes = "1.10.0"
chrono = "0.4.39"
exocore-protos = {version = "0.1.27", path = "../protos"}
futures = { version = "0.3.31", features = ["async-await"] }
libp2p = { version = "0.53.2", features = ["noise", "secp256k1"], default-features = false }
libp2p-identity = { version = "0.2.10", features = ["secp256k1", "ed25519"], default-features = false }
log = "0.4.25"
log4rs = { version = "1.3.0", optional = true }
multihash = "0.19.3"
multihash-codetable = {version="0.1.4", features=["sha3"]}
multihash-derive = {version="0.9"}
petname = "2.0"
rand = "0.8"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.138"
serde_yaml = "0.9.34"
shadow-rs = { version = "0.38.1", default-features = false }
thiserror = "2.0.11"
url = "2.5.4"
uuid = { version = "1.4.1", features = ["v4", "wasm-bindgen"] }
wasm-timer = "0.2.5"

# web
web-sys = { version = "0.3.77", features = ["Storage"], optional = true }

[target."cfg(target_arch = \"wasm32\")".dependencies]
getrandom = "0.2.15"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
chrono = { version = "0.4.39", default-features = false, features = [] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.43.0", features = ["rt"], default-features = false }

[build-dependencies]
shadow-rs = { version = "0.38.1", default-features = false }

[dev-dependencies]
criterion_bencher_compat = "0.4.0"
log4rs = "1.3.0"
tempfile = "3.16.0"
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread", "time"], default-features = false }

[[bench]]
harness = false
name = "capnp_frame"
